--- a/RLohiya_Final_Project.html
+++ b/RLohiya_Final_Project.html
@@ -130,6 +130,52 @@ $(document).ready(function () {
 </div>
 <div id="is-605-fundamentals-of-computational-mathematics" class="section level1">
 <h1>IS 605 FUNDAMENTALS OF COMPUTATIONAL MATHEMATICS</h1>
+<pre class="r"><code>#download the files and then load them from storage
+F1 &lt;- read.csv(&quot;https://raw.githubusercontent.com/Riteshlohiya/Data605_Final_Project/master/F1.csv&quot;, stringsAsFactors = FALSE)
+F1</code></pre>
+<pre><code>##      Y1   Y2   Y3   Y4   X1   X2   X3   X4
+## 1  20.3 20.8 28.4 20.2  9.3  7.4  9.5  9.3
+## 2  19.1 14.6 21.5 18.6  4.1  6.4  3.7 12.4
+## 3  19.3 18.0 20.8 22.6 22.4  8.5 11.7 19.9
+## 4  20.9  7.3 22.2 11.4  9.1  9.5  7.4  6.9
+## 5  22.0 19.4 21.6 23.6 15.8 11.8  5.3 -1.0
+## 6  23.5 13.5 21.8 24.0  7.1  8.8  7.4 10.6
+## 7  13.8 14.7 25.2 26.0 15.9  8.4  7.4  6.4
+## 8  18.8 15.3 22.5 26.8  6.9  5.1  8.6 10.6
+## 9  20.9 12.6 21.1 19.7 16.0 11.4  9.1  1.2
+## 10 18.6 13.0 21.7 22.7  6.7 15.1 11.4  7.7
+## 11 22.3 13.1 21.4 16.8  8.2 12.6  8.4 15.5
+## 12 17.6 10.3 20.8 20.2 16.0  8.0  7.3  6.9
+## 13 20.8 14.9 23.0 21.7  6.4 10.3 11.3 13.7
+## 14 28.7 14.8 17.4 20.9 11.8 10.4  4.4  3.7
+## 15 15.2 16.2 21.3 26.9  3.5  9.5  9.3  4.4
+## 16 20.9 15.7 15.1 16.3 21.7  9.5 10.9 11.5
+## 17 18.4 16.3 17.8 19.9 12.2 15.1 10.9  4.2
+## 18 10.3 11.5 26.4 15.5  9.3  6.6  7.7 13.9
+## 19 26.3 12.2 21.6 26.5  8.0 15.4  7.7 12.9
+## 20 28.1 11.8 22.5 21.7  6.2  8.2 11.5  1.2</code></pre>
+<pre class="r"><code>#define X and Y.  
+X &lt;- F1$X1
+Y &lt;- F1$Y1</code></pre>
+</div>
+<div id="probability." class="section level1">
+<h1>Probability.</h1>
+<p>Calculate as a minimum the below probabilities a through c. Assume the small letter “x” is estimated as the 1st quartile of the X variable, and the small letter “y” is estimated as the 2d quartile of the Y variable. Interpret the meaning of all probabilities.</p>
+<pre class="r"><code># get quartiles
+summary(X)</code></pre>
+<pre><code>##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##    3.50    6.85    9.20   10.83   15.82   22.40</code></pre>
+<pre class="r"><code>x &lt;- summary(X)[2]
+x</code></pre>
+<pre><code>## 1st Qu. 
+##    6.85</code></pre>
+<pre class="r"><code>summary(Y)</code></pre>
+<pre><code>##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##   10.30   18.55   20.55   20.29   22.07   28.70</code></pre>
+<pre class="r"><code>y &lt;- summary(Y)[3]
+y</code></pre>
+<pre><code>## Median 
+##  20.55</code></pre>
 </div>
 
 
